Format code using spring-javaformat